@@ -8,6 +8,7 @@ Agregadas funciones directas para aumentar/reducir el Volumen del Sonido
 Permitir grabar pantalla de ZX80/81 a archivo .scr
 Permitir grabar una nota de texto en un snapshot ZSF
 Permitir encontrar archivos de rom al ejecutar ZEsarUX desde una carpeta actual diferente de la ruta de las roms
+Agregado soporte para archivos .ay en Visor de Archivos
 
 * Mejoras:
 
@@ -22,7 +23,9 @@ Mejorado AY Player:
 - Permitir grabar lista de reproducción del AY Player (lista entera o sólo archivos marcados)
 - Permitir incrementar longitud de pista (para algunas pistas con longitud incorrecta)
 - Agregadas funciones directas para siguente/anterior pista/archivo
+- Mostrar décimas de segundo en duración de canción y tiempo transcurrido
 - Mejor algoritmo de aleatorio
+- Corregida detección de silencio cuando la reproducción está pausada
 
 Mejorada emulación de Sinclair QL:
 - Permitir aumentar tamaño RAM de Sinclair QL
